# gzdoom-config-converter

./: CMakeLists.txt  README.md  config-converter.cpp  config-converter.h  version.h
.github/workflows/: ccpp.yml
